fix resizing issue when scrollbar appear/disappear while you type #378

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -67,7 +67,7 @@
     position: relative;
     /*overflow: hidden;*/
     overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 .terminal, .cmd {
     contain: content;
@@ -79,6 +79,20 @@ body.terminal {
 }
 .terminal > div {
     overflow: hidden;
+}
+.terminal > iframe, .terminal .font iframe {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    z-index: -1;
+    visibility: hidden;
+    height: 100%;
+    border: none;
+    padding: 0;
+    width: 100%
 }
 .cmd {
     padding: 0;
