--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Sun, 11 Mar 2018 14:20:09 +0000
+ * Date: Sun, 18 Mar 2018 19:19:05 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -67,7 +67,7 @@
     position: relative;
     /*overflow: hidden;*/
     overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 .terminal, .cmd {
     contain: content;
@@ -79,6 +79,20 @@ body.terminal {
 }
 .terminal > div {
     overflow: hidden;
+}
+.terminal > iframe, .terminal .font iframe {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    z-index: -1;
+    visibility: hidden;
+    height: 100%;
+    border: none;
+    padding: 0;
+    width: 100%
 }
 .cmd {
     padding: 0;
